# heat_raster

./: dependencies.rosinstall
cambr_msgs/: CMakeLists.txt  package.xml
cambr_msgs/action/: PlanToolPaths.action
cambr_msgs/msg/: CloudConfig.msg  HeatToolPath.msg  ToolPathConfig.msg
heat_msgs/: CMakeLists.txt
heat_msgs/srv/: PolylineSmoother.srv
heat_ros/: CMakeLists.txt  heat_surface_action.launch  package.xml
heat_ros/include/heat_ros/: heat_surface_planner.hpp  hm_heat_path.hpp
heat_ros/launch/: create_planar_pc.launch  gc_heat_method.launch  gc_pc_to_mesh.launch  gc_pointcloud.launch  heat_surface_action.launch  pc_to_mesh.launch  pcl_pc_to_mesh.launch  pcl_pc_to_mesh_no_removal.launch  test_heat_method.launch
heat_ros/src/: create_planar_pc.cpp  create_shape_msgs_mesh.cpp  gc_heat_method.cpp  gc_pc_to_mesh.cpp  gc_pointcloud.cpp  heat_surface_plan_client.cpp  heat_surface_plan_server.cpp  heat_surface_planner.cpp  hm_heat_path.cpp  meshing_code.cpp  pc_to_mesh.cpp  pcl_pc_to_mesh.cpp  pcl_pc_to_mesh_no_removal.cpp
libgeodesic/include/libgeodesic/: hmHeatPath.hpp
libgeodesic/src/: hmHeatPath.cc  hmTriDistance.c
smooth_pose_traj/: CMakeLists.txt  package.xml
smooth_pose_traj/include/smooth_pose_traj/: polyline_smoother.hpp
smooth_pose_traj/src/: polyline_smoother.cpp  polyline_smoother_srv.cpp  smooth_pose_traj.cpp  smooth_pose_traj_srv.cpp
