<?xml version="1.0"?>
<package format="3">
  <name>cambr_msgs</name>
  <version>0.0.0</version>
  <description>The cambr_msgs package</description>

  <maintainer email="jerit.george@swri.org">Jerit George</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>


  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <export>

  </export>
</package>
